--- a/Freelancer-s-Web/Pages/Authentication/Login.cshtml
+++ b/Freelancer-s-Web/Pages/Authentication/Login.cshtml
@@ -2,3 +2,6 @@
 @model Freelancer_s_Web.Pages.Authentication.LoginModel
 @{
 }
+<div class="row">
+    <button class="btn btn-primary" asp-action="Login">Sign in</button>
+</div>
