--- a/Freelancer-s-Web/Pages/Profile/Edit.cshtml
+++ b/Freelancer-s-Web/Pages/Profile/Edit.cshtml
@@ -11,16 +11,21 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="User.Avatar" class="control-label"></label>
-                <input asp-for="User.Avatar" class="form-control" />
+                <input asp-for="User.Avatar" class="form-control" readonly/>
                 <span asp-validation-for="User.Avatar" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="@Model.FileUpload"></label>
+                <input asp-for="@Model.FileUpload" />
+                <span asp-validation-for="@Model.FileUpload" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
+                <input asp-for="User.Email" class="form-control" readonly />
                 <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,31 +54,31 @@
                 <span asp-validation-for="User.MajorId" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="User.Id" />
-            <div class="form-group">
-                <label asp-for="User.CreatedAt" class="control-label"></label>
-                <input asp-for="User.CreatedAt" class="form-control" />
-                <span asp-validation-for="User.CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.UpdatedAt" class="control-label"></label>
-                <input asp-for="User.UpdatedAt" class="form-control" />
-                <span asp-validation-for="User.UpdatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="User.IsDeleted" /> @Html.DisplayNameFor(model => model.User.IsDeleted)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.CreatedBy" class="control-label"></label>
-                <input asp-for="User.CreatedBy" class="form-control" />
-                <span asp-validation-for="User.CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.UpdatedBy" class="control-label"></label>
-                <input asp-for="User.UpdatedBy" class="form-control" />
-                <span asp-validation-for="User.UpdatedBy" class="text-danger"></span>
-            </div>
+            @*<div class="form-group">
+            <label asp-for="User.CreatedAt" class="control-label"></label>
+            <input asp-for="User.CreatedAt" class="form-control" />
+            <span asp-validation-for="User.CreatedAt" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="User.UpdatedAt" class="control-label"></label>
+            <input asp-for="User.UpdatedAt" class="form-control" />
+            <span asp-validation-for="User.UpdatedAt" class="text-danger"></span>
+        </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" asp-for="User.IsDeleted" /> @Html.DisplayNameFor(model => model.User.IsDeleted)
+            </label>
+        </div>
+        <div class="form-group">
+            <label asp-for="User.CreatedBy" class="control-label"></label>
+            <input asp-for="User.CreatedBy" class="form-control" />
+            <span asp-validation-for="User.CreatedBy" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="User.UpdatedBy" class="control-label"></label>
+            <input asp-for="User.UpdatedBy" class="form-control" />
+            <span asp-validation-for="User.UpdatedBy" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
