--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@ ViewData["Title"] = "Home page";
                                     if (loginUser.Role == "USER")
                                     {
                                         <li class="nav-item">
-                                            <a class="nav-link text-dark" asp-area="" asp-page="/Profile/Index">Profile</a>
+                                            <a class="nav-link text-dark" asp-area="" asp-page="/Profile/Edit">Profile</a>
                                         </li>
                                     }
                                 }
