--- a/Freelancer-s-Web/Pages/Profile/Index.cshtml
+++ b/Freelancer-s-Web/Pages/Profile/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Freelancer_s_Web.Pages.Profile.IndexModel
+@model IndexModel
 
 @{
     ViewData["Title"] = "Profile";
@@ -57,6 +57,5 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.User.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.User.Id">Edit</a> 
 </div>
