--- a/Freelancer-s-Web/Pages/Profile/Index.cshtml
+++ b/Freelancer-s-Web/Pages/Profile/Index.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Avatar)
+       
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10 ">
             @*@Html.DisplayFor(model => model.User.Avatar)*@
-            <img src="@Model.User.Avatar" width="50" height="50" />
+            <img class="rounded-circle border" src="@Model.User.Avatar" width="150" height="150" />
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User.Email)
