--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@ ViewData["Title"] = "Home page";
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm d-flex flex-row navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Freelancer_s_Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -53,9 +53,12 @@ ViewData["Title"] = "Home page";
                                 {
                                     if (loginUser.Role == "USER")
                                     {
-                                        <li class="nav-item">
-                                            <a class="nav-link text-dark" asp-area="" asp-page="/Profile/Index">
-                                                <img src="@CustomAuthorization.loginUser.Avatar" width="25" height="25" />
+                                        <li class="nav-item ml-auto" >
+                                           
+                                            <a class="nav-link text-dark d-flex flex-row" asp-area="" asp-page="/Profile/Index">
+                                                <span>@CustomAuthorization.loginUser.DisplayName</span>
+                                           
+                                                <img class="rounded-circle mx-1 border" src="@CustomAuthorization.loginUser.Avatar" width="27" height="27" />
                                             </a>
                                         </li>
                                     }
