--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@ ViewData["Title"] = "Home page";
     <title>@ViewData["Title"] - Freelancer_s_Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @*<link href="~/css/style.css" rel="stylesheet" type="text/css" />*@
 </head>
 <body>
     <header>
@@ -53,11 +54,14 @@ ViewData["Title"] = "Home page";
                                 {
                                     if (loginUser.Role == "USER")
                                     {
-                                        <li class="nav-item ml-auto" >
-                                           
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-page="/Message">Messages</a>
+                                        </li>
+                                        <li class="nav-item ml-auto">
+
                                             <a class="nav-link text-dark d-flex flex-row" asp-area="" asp-page="/Profile/Index">
                                                 <span>@CustomAuthorization.loginUser.DisplayName</span>
-                                           
+
                                                 <img class="rounded-circle mx-1 border" src="@CustomAuthorization.loginUser.Avatar" width="27" height="27" />
                                             </a>
                                         </li>
