--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@ ViewData["Title"] = "Home page";
                                     if (loginUser.Role == "USER")
                                     {
                                         <li class="nav-item">
-                                            <a class="nav-link text-dark" asp-page="/Message">Messages</a>
+                                            <a class="nav-link text-dark" asp-page="/Message/Index">Messages</a>
                                         </li>
                                         <li class="nav-item ml-auto">
 
