--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -88,6 +88,10 @@ ViewData["Title"] = "Home page";
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/site.js"></script>
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
