--- a/Freelancer-s-Web/Pages/Message/ChatRoom.cshtml
+++ b/Freelancer-s-Web/Pages/Message/ChatRoom.cshtml
@@ -43,12 +43,12 @@
     </div>
     <div class="row">
         <div class="col-2">Message</div>
-        <div class="col-4"><input type="text" id="messageInput" /></div>
+        <div class="col-4"><input type="text" id="messageInput"/></div>
     </div>
     <div class="row">&nbsp;</div>
     <div class="row">
         <div class="col-6">
-            <input type="button" id="sendButton" value="Send Message" />
+            <input type="button" id="sendButton" value="Send Message"/>
         </div>
     </div>
 </div>
@@ -59,25 +59,37 @@
 </div>
 <div class="row">
     <div class="col-12">
-        <ul id="messagesList"></ul>
+        <ul id="messagesList" class="d-flex flex-column" style="list-style-type: none; overflow: scroll; max-height: 500px"></ul>
     </div>
 </div>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/site.js"></script>
-<script>
+    <script>
     var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build();
 
     connection.on("GetMessagesResponse", function (res) {
         //console.log("GetMessagesResponse");
         console.log(res);
+        var userId = document.getElementById("userInput").value;
         document.getElementById("messagesList").innerHTML = ""
+
+        var element = document.getElementById("messagesList");
+        element.scrollTo(0, element.scrollHeight);
+
         res.forEach(item => {
             var li = document.createElement("li");
             const [dateValues, timeValues] = item.value.createdAt.split('T');
             const [hh, mm, ss] = timeValues.split(':')
 
-            li.textContent = " [" + `${dateValues} ${hh}:${mm}` + "] " + item.key + ": " + item.value.content;
+            if (item.value.receiverId == userId) {
+                li.innerHTML = `<img src="${item.key.avatar}" width="25" height="25" class="rounded-circle mx-1 border">` + ": " + item.value.content + `<br>` + " [" + `${dateValues} ${hh}:${mm}` + (item.value.isSeen ? " Seen" : " Not seen") + "] ";
+            }
+            else {
+                li.classList.add("ml-auto");
+                li.innerHTML = item.value.content + " :" + `<img src="${item.key.avatar}" width="25" height="25" class="rounded-circle mx-1 border">` + `<br>` + " [" + `${dateValues} ${hh}:${mm}` + "] ";
+            }
+
             document.getElementById("messagesList").appendChild(li);
         })
         @*$.each(res, (item) => {
@@ -99,9 +111,12 @@
     sendBtn.addEventListener("click", () => {
         var userId = document.getElementById("userInput").value;
         var messageInput = document.getElementById("messageInput").value;
+        if (!messageInput || messageInput.trim().length == 0) {
+            alert("Message cant empty");
+            return;
+        }
         connection.invoke("SendMessage", userId, messageInput).catch(function (err) {
             return console.error(err.toString());
         });
     })
-
-</script>
+    </script>
