--- a/Freelancer-s-Web/Pages/PostPage/Details.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Details.cshtml
@@ -1,9 +1,38 @@
 ﻿@page
+@using Freelancer_s_Web.Commons
 @model Freelancer_s_Web.Pages.PostPage.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
 }
+
+<head>
+    <style>
+     .comment{
+    border: 1px solid rgba(16, 46, 46, 1);
+    background-color: white;
+    float: left;
+    border-radius: 5px;
+    padding-left: 40px;
+    padding-right: 30px;
+    padding-top: 10px;
+    width : 100%;
+    
+     }
+     .comment h4,.comment span{
+     display: inline;
+     }
+
+     .comment p,.comment span{
+     color: black;
+     }
+
+     h3,h4{
+     color: black;
+     font-weight: bold;
+     }
+    </style>
+</head>
 
 <h1>Details</h1>
 
@@ -56,12 +85,61 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Post.Status)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Post.Status)
-        </dd>
-       
+            @if (@Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
+                {
+                    <dd class="col-sm-10">
+                       @Html.DisplayName("PUBLIC")
+                    </dd>
+                }
+                else if (@Model.Post.Status == CommonEnums.POST_STATUS.PRIVATE)
+                {
+                    <dd class="col-sm-10">
+                       @Html.DisplayName("PRIVATE")
+                    </dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                       @Html.DisplayName("REMOVE")
+                    </dd>
+                }
     </dl>
 </div>
+
+<div style="float:left; width:100%; margin-bottom:30px">
+    <h3>Contents</h3>
+    <hr />
+    @foreach(var pc in Model.postContents)
+    {
+        if (pc.Type == CommonEnums.POST_CONTENT_TYPE.IMAGE)
+        {
+            <img src="@pc.Url" alt="" style="float:left;">
+        }
+        else
+        {
+            <video style="width:70%; height:500px; float:left;" control>
+                <source src="@pc.Url" type="video/mp4">
+            </video>
+        }
+    }
+</div>
+
+<div class="row">
+            <div class="col-sm-5 col-md-6 col-12 pb-4">
+                <h3>Comments</h3>
+                <hr />
+                @foreach(var item in Model.comments) {
+                <div class="comment mt-4 text-justify float-left">
+                    <img src="@item.User.Avatar" alt="" class="rounded-circle" width="40" height="40">
+                    <h4>@item.User.DisplayName</h4>
+                    <span>- @item.CreatedAt</span>
+                    <br>
+                    <p>@item.Content</p>
+                </div>
+                }
+            </div>
+</div>
+
 <div>
    @* <a asp-page="./Edit" asp-route-id="@Model.Post.Id">Edit</a>
     <a asp-page="./Index">Back to List</a>*@
