--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@ ViewData["Title"] = "Home page";
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+
                         @{
                             if (loginUser == null)
                             {
@@ -53,11 +54,15 @@ ViewData["Title"] = "Home page";
                                 {
                                     if (loginUser.Role == "USER")
                                     {
-                                        <li class="nav-item ml-auto" >
-                                           
+
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-page="">Create Post</a>
+                                        </li>
+                                        <li class="nav-item ml-auto">
+
                                             <a class="nav-link text-dark d-flex flex-row" asp-area="" asp-page="/Profile/Index">
                                                 <span>@CustomAuthorization.loginUser.DisplayName</span>
-                                           
+
                                                 <img class="rounded-circle mx-1 border" src="@CustomAuthorization.loginUser.Avatar" width="27" height="27" />
                                             </a>
                                         </li>
