add function close post

--- a/Freelancer-s-Web/Pages/ApplicationPages/ApplicationList.cshtml
+++ b/Freelancer-s-Web/Pages/ApplicationPages/ApplicationList.cshtml
@@ -106,22 +106,25 @@
 }
     </tbody>
 </table>
-<form method="post" asp-page-handler="ConfirmAndClosePost" asp-route-id="@Model.Post.Id">
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm-post">Confirm and close post</button>
-    <div class="modal" id="confirm-post" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title">Cancel</h2>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you want to confirm and close post: @Model.Post.Title?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-success">Yes, Confirm</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+@if (Model.Post.Status == CommonEnums.POST_STATUS.PUBLIC)
+{
+    <form method="post" asp-page-handler="ConfirmAndClosePost" asp-route-id="@Model.Post.Id">
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm-post">Confirm and close post</button>
+        <div class="modal" id="confirm-post" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">Cancel</h2>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to confirm and close post: @Model.Post.Title?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Yes, Confirm</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</form> 
+    </form> 
+}
