--- a/Freelancer-s-Web/Pages/PostPage/Create.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Post.UserId" class="control-label"></label>
-                <select asp-for="Post.UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <input asp-for="Post.UserId" type="hidden" value="ViewBag.UserId"/>
             </div>
             <div class="form-group">
                 <label asp-for="Post.Title" class="control-label"></label>
@@ -45,31 +45,6 @@
             <div class="form-group">
                 <label asp-for="Post.MajorId" class="control-label"></label>
                 <select asp-for="Post.MajorId" class ="form-control" asp-items="ViewBag.MajorId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.CreatedAt" class="control-label"></label>
-                <input asp-for="Post.CreatedAt" class="form-control" />
-                <span asp-validation-for="Post.CreatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.UpdatedAt" class="control-label"></label>
-                <input asp-for="Post.UpdatedAt" class="form-control" />
-                <span asp-validation-for="Post.UpdatedAt" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Post.IsDeleted" /> @Html.DisplayNameFor(model => model.Post.IsDeleted)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.CreatedBy" class="control-label"></label>
-                <input asp-for="Post.CreatedBy" class="form-control" />
-                <span asp-validation-for="Post.CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Post.UpdatedBy" class="control-label"></label>
-                <input asp-for="Post.UpdatedBy" class="form-control" />
-                <span asp-validation-for="Post.UpdatedBy" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
