--- a/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
+++ b/Freelancer-s-Web/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@ ViewData["Title"] = "Home page";
     <title>@ViewData["Title"] - Freelancer_s_Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    @*<link href="~/css/style.css" rel="stylesheet" type="text/css" />*@
+    <link href="~/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <header>
@@ -59,8 +59,6 @@ ViewData["Title"] = "Home page";
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-area="" asp-page="">Create Post</a>
                                         </li>
-                                        <li class="nav-item ml-auto">
-
                                         <li class="nav-item">
                                             <a class="nav-link text-dark" asp-page="/Message/Index">Messages</a>
                                         </li>
